WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
11723
XMLHttpRequest fails in a page loaded with WebFrame's loadHTMLString: or loadData:
https://bugs.webkit.org/show_bug.cgi?id=11723
Summary
XMLHttpRequest fails in a page loaded with WebFrame's loadHTMLString: or load...
Timothy Hatcher
Reported
2006-11-30 09:33:23 PST
All XMLHttpRequest's fail in a pages loaded with WebFrame's loadHTMLString: or loadData:. This failure happens because of the cross-domian check since the frame has a applewebdata://... URL. These URLs should be treated like other file URLs and be allowed to open an XMLHttpRequest to any domain.
Attachments
Patch
(1.27 KB, patch)
2006-11-30 09:38 PST
,
Timothy Hatcher
beidson
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Timothy Hatcher
Comment 1
2006-11-30 09:38:20 PST
Created
attachment 11682
[details]
Patch XMLHttpRequest fails in a page loaded with WebFrame's loadHTMLString: or loadData:
http://bugs.webkit.org/show_bug.cgi?id=11723
Allow cross-domain XMLHTTPRequest for applewebdata URLs. No automated way to test, tested in Safari's debug Snippet Editor. * xml/xmlhttprequest.cpp: (WebCore::XMLHttpRequest::urlMatchesDocumentDomain):
Brady Eidson
Comment 2
2006-11-30 09:46:33 PST
Comment on
attachment 11682
[details]
Patch r=me
Timothy Hatcher
Comment 3
2006-11-30 09:49:06 PST
Landed in
r17939
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug