        Reviewed by Brady and Eric.

XMLHttpRequest fails in a page loaded with WebFrame's loadHTMLString: or loadData:
        http://bugs.webkit.org/show_bug.cgi?id=11723

        Allow cross-domain XMLHTTPRequest for applewebdata URLs. No automated way to test,
        tested in Safari's debug Snippet Editor.

        * xml/xmlhttprequest.cpp:
        (WebCore::XMLHttpRequest::urlMatchesDocumentDomain):



Canonical link: https://commits.webkit.org/15067@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@17939 268f45cc-cd09-0410-ab3c-d52691b4dbfc